[gd_scene load_steps=18 format=3 uid="uid://cjm1hfw3ipf60"]

[ext_resource type="Material" uid="uid://cw8kovgeqm575" path="res://Assets/Resource/Shaders/black_white_material.tres" id="1_4nyd1"]
[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="2_mgfg0"]
[ext_resource type="Script" path="res://scene/ai_search.gd" id="3_3k8s7"]
[ext_resource type="StyleBox" uid="uid://jreqk0obhgru" path="res://Assets/Resource/Themes/pixel/pixel_style_panel_texture.tres" id="3_dfb3w"]
[ext_resource type="Texture2D" uid="uid://qxi765dvdt5e" path="res://Assets/Textures/apps/apps15.png" id="5_v7aps"]
[ext_resource type="PackedScene" uid="uid://ddwpnfmrdtvum" path="res://Main/Components/AISearch/ai_message.tscn" id="6_asxi4"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="6_m5d4o"]
[ext_resource type="Script" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="7_1dvhm"]
[ext_resource type="Texture2D" uid="uid://dmty4yvpbwyrg" path="res://Assets/Textures/ui/search.png" id="7_46amr"]

[sub_resource type="Resource" id="Resource_wkqpx"]
script = ExtResource("7_1dvhm")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_t43ur"]
script = ExtResource("7_1dvhm")
friction = 8.0
minimum_velocity = 0.4
rebound_strength = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5memk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_olhog"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ewqai"]

[sub_resource type="Animation" id="Animation_j35gv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 170)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 55)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iayqr"]
resource_name = "search"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.5, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 170), Vector2(0, 175), Vector2(0, 62), Vector2(0, 60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 55), Vector2(0, 60), Vector2(0, -60)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ne2m"]
_data = {
"RESET": SubResource("Animation_j35gv"),
"search": SubResource("Animation_iayqr")
}

[node name="AISearch" type="Control"]
material = ExtResource("1_4nyd1")
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 304.0
offset_bottom = 540.0
mouse_filter = 2
theme = ExtResource("2_mgfg0")
script = ExtResource("3_3k8s7")
ai_message = ExtResource("6_asxi4")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_width = 3.4

[node name="ColorRect" type="ColorRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 1
offset_top = 55.0
offset_right = 304.0
offset_bottom = 163.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
use_parent_material = true
custom_minimum_size = Vector2(108, 108)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_v7aps")
expand_mode = 2
stretch_mode = 5

[node name="CenterContainer2" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
use_parent_material = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 35.0
offset_bottom = 53.0
grow_horizontal = 2
mouse_filter = 2

[node name="Label" type="Label" parent="CenterContainer2"]
use_parent_material = true
layout_mode = 2
text = "Your Best AI Search Asistent"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -170.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("6_m5d4o")
wheel_scroll_damper = SubResource("Resource_wkqpx")
dragging_scroll_damper = SubResource("Resource_t43ur")

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
use_parent_material = true
custom_minimum_size = Vector2(304, 200)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
offset_top = 170.0
offset_right = 304.0
offset_bottom = 370.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(220, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.25098)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_constants/caret_width = 2
theme_override_styles/normal = ExtResource("3_dfb3w")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5memk")
theme_override_styles/read_only = ExtResource("3_dfb3w")
placeholder_text = "Enter the Key Words to Search"
context_menu_enabled = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="SearchButton" type="TextureButton" parent="VBoxContainer/TextEdit"]
use_parent_material = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_left = 194.0
offset_top = 5.0
offset_right = 214.0
offset_bottom = 25.0
texture_normal = ExtResource("7_46amr")
ignore_texture_size = true

[node name="SearchSelectPopup" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
material = ExtResource("1_4nyd1")
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="SearchItemList" type="ItemList" parent="VBoxContainer/SearchSelectPopup"]
use_parent_material = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hovered_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_selected_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/guide_color = Color(0, 0, 0, 0.501961)
theme_override_styles/panel = SubResource("StyleBoxEmpty_olhog")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ewqai")
allow_reselect = true
auto_height = true
item_count = 3
item_0/text = "大洋国三大部门"
item_1/text = "和平部"
item_2/text = "大洋国边境墙"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ne2m")
}

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="gui_input" from="ScrollContainer" to="." method="_on_scroll_container_gui_input"]
[connection signal="gui_input" from="VBoxContainer/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="pressed" from="VBoxContainer/TextEdit/SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/SearchSelectPopup/SearchItemList" to="." method="_on_month_item_list_item_selected"]
